force-app/main/default/objects/SEG_MarcasCSO__c/SEG_MarcasCSO__c.object-meta.xml
<CustomObject>
    <label>Marcas CSO</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Marcas CSO ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marcas CSO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>