force-app/main/default/objects/SEG_MarcasCSO__c/fields/SEG_Marca__c.field-meta.xml
<CustomField>
    <fullName>SEG_Marca__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marca</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_Caracteristica__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>SEG_Caracteristicacaso</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_Caracteristica__c</referenceTo>
    <relationshipLabel>Marcas CSO</relationshipLabel>
    <relationshipName>Marcas_CSO</relationshipName>
    <type>Lookup</type>
</CustomField>