force-app/main/default/objects/SEG_MarcasCSO__c/fields/SEG_MarcasCSO__c.field-meta.xml
<CustomField>
    <fullName>SEG_MarcasCSO__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <label>Marcas CSO</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>